Changes in 0.3.0, (SVN trunk):

 * The original author, Ed Zaleski, hands over ezstream maintainership to
   Moritz Grimm.

 * New features:
   - Playlist shuffling support, enabled via the new <shuffle> configuration
     option.
   - Add feature to skip the currently streaming track, done by sending the
     SIGUSR1 signal to the ezstream process.
   - New command line option `-q': Suppress standard error output from external
     de-/encoders.
   - New command line option `-v': Produce more verbose output.
   - New "real-time" status display of the stream when both -q and -v are given
     on the command line.
   - Thorough configuration file checks with helpful error messages.
   - The @M@ metadata placeholder is now supported in <decode>.

 * Fixes:
   - At least one stack and one heap overflow have been fixed.
   - Several memory leaks have been fixed.
   - Strict checking of the configuration file prevents unexpected behavior and
     adds another safeguard to prevent crashes.
   - Fixed and more portable signal handling.

 * Miscellaneous, user-visible changes:
   - Improved documentation. Ezstream now has a comprehensive man page and the
     README file has been rewritten.
   - Consistency improvements in the configuration examples. The examples are
     now also installed.
   - The <format/> and <match/> configuration elements, as well as filename
     extension matching to detect playlists in the <filename> element, are
     now case insensitive.
   - Various improvements in the build system and portability fixes.
   - Consistent and more helpful messages from ezstream. By default, ezstream
     no longer clutters the screen with lots of output (some information that
     used to be available needs to be enabled with the new `-v' command line
     parameter.)
   - Tweaked metadata string generation: no more lone " - " dashes at the
     beginning or end of the string.



Changes in 0.2.1, released on 2005-12-14:

 * ezstream.c: