@@ -18,6 +18,11 @@
     <!-- Enable playlist shuffling: -->
     <shuffle>1</shuffle>
     <!--
+       The file in <filename> is a regular playlist and not a program.
+       For demonstrational purposes, explicitly state this here:
+     -->
+    <playlist_program>0</playlist_program>
+    <!--
       The following settings are used to describe your stream to the server.
       It's up to you to make sure that the bitrate/quality/samplerate/channels
       information matches up with your oggenc encoder settings below.
