@@ -6,6 +6,9 @@ Changes in 0.3.0, (SVN trunk):
  * New features:
    - Playlist shuffling support, enabled via the new <shuffle> configuration
      option.
+   - Playlist scripting support: Indicate that the executable in <filename>
+     should be run each time to get a new media filename to stream, by setting
+     the new <playlist_program> configuration option to 1.
    - Add feature to skip the currently streaming track, done by sending the
      SIGUSR1 signal to the ezstream process.
    - New command line option `-q': Suppress standard error output from external
@@ -15,6 +18,8 @@ Changes in 0.3.0, (SVN trunk):
      on the command line.
    - Thorough configuration file checks with helpful error messages.
    - The @M@ metadata placeholder is now supported in <decode>.
+   - Playlists may now have the '.txt' filename extension in addition to
+     '.m3u'.
 
  * Fixes:
    - At least one stack and one heap overflow have been fixed.
